# kopf

./: .codecov.yml  .deepsource.toml  .dockerignore  .gitignore  .importlinter  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  .zappr.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  DEVELOPMENT.md  Dockerfile  LICENSE  LICENSE.md  MAINTAINERS  Pipfile  README.md  SECURITY.md  _importlinter_conditional.py  context7.json  mypy.ini  nova.yml  peering-v1beta1.yaml  peering.yaml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/: CODEOWNERS  FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yaml  bug_report.md  config.yaml  feature-request.yaml  feature_request.md  question.md  question.yaml
.github/workflows/: ci.yaml  codeql.yml  docker.yaml  pages.yaml  publish.yaml  secrets.yaml  thorough.yaml
docker/: entrypoint.sh  usage.txt
docs/: .gitattributes  .gitignore  admission.rst  alternatives.rst  architecture-layers.xml  architecture.rst  async.rst  authentication.rst  cleanup.rst  cli.rst  concepts.rst  conf.py  configuration.rst  configuring.rst  continuity.rst  contributing.rst  critiques.rst  daemons.rst  deployment-depl.yaml  deployment-rbac.yaml  deployment.rst  docker.rst  embedding.rst  errors.rst  events.rst  filters.rst  handlers.rst  hierarchies.rst  idempotence.rst  impressum.rst  index.rst  indexing.rst  install.rst  kwargs.rst  loading.rst  memories.rst  memos.rst  minikube.rst  naming.rst  patches.rst  (+15 more)
docs/_static/: context7.json
docs/walkthrough/: cleanup.rst  creation.rst  deletion.rst  diffs.rst  prerequisites.rst  problem.rst  resources.rst  starting.rst  updates.rst
examples/: .isort.cfg  README.md  crd-v1beta1.yaml  crd.yaml  obj.yaml  requirements.txt
examples/01-minimal/: README.md  example.py
examples/02-children/: README.md  example.py
examples/03-exceptions/: README.md  example.py
examples/04-events/: README.md  example.py
examples/05-handlers/: README.md  example.py
examples/06-peering/: README.md  example.py
examples/07-subhandlers/: README.md  example.py
examples/08-events/: README.md  example.py
examples/09-testing/: README.md  example.py  test_example_09.py
examples/09-testing-kmock/: README.md  example.py  test_09_via_kmock.py
examples/10-builtins/: README.md  example.py  test_example_10.py
examples/10-filtering-handlers/: example.py  test_example_10.py
examples/11-filtering-handlers/: README.md  example.py  test_example_11.py
examples/12-embedded/: README.md  example.py  test_nothing.py
examples/13-hooks/: README.md  example.py
examples/14-daemons/: example.py
examples/15-timers/: example.py
examples/16-indexing/: example.py
examples/17-admission/: example.py
examples/99-all-at-once/: README.md  example.py
kopf/: __init__.py  __main__.py  cli.py  config.py  events.py  on.py  testing.py
kopf/_kits/: __init__.py  hierarchies.py  loops.py  runner.py  runners.py  webhacks.py  webhooks.py
kopf/aiokits/: aioadapters.py  aioenums.py  aiotime.py
kopf/clients/: auth.py  classes.py  creating.py  discovery.py  errors.py  events.py  fetching.py  patching.py  scanning.py  watching.py
kopf/engines/: __init__.py  loggers.py  logging.py  peering.py  posting.py  probing.py  sleeping.py
kopf/k8s/: __init__.py  events.py  fetching.py  patching.py  watching.py
kopf/logging/: logging.py
kopf/reactor/: __init__.py  activities.py  admission.py  callbacks.py  causation.py  daemons.py  effects.py  errors.py  handlers.py  handling.py  indexing.py  invocation.py  lifecycles.py  matching.py  observation.py  orchestration.py  peering.py  processing.py  queueing.py  registries.py  registry.py  running.py  state.py  states.py  subhandling.py  watching.py
kopf/storage/: __init__.py  conventions.py  diffbase.py  finalizers.py  lastseen.py  progress.py  states.py
kopf/structs/: __init__.py  bodies.py  callbacks.py  configuration.py  containers.py  credentials.py  dicts.py  diffs.py  ephemera.py  filters.py  finalizers.py  handlers.py  hierarchies.py  ids.py  lastseen.py  memos.py  patches.py  primitives.py  progress.py  references.py  registries.py  resources.py  reviews.py  status.py  throttlers.py
kopf/testing/: __init__.py  runner.py
kopf/toolkits/: hierarchies.py  legacy_registries.py  runner.py  webhooks.py
kopf/utilities/: __init__.py  aiotasks.py  hostnames.py  loaders.py  piggybacking.py  thirdparty.py
scripts/: minikube-for-travis.sh
tests/: conftest.py  test_absent_modules.py  test_aiohttp_capabilities.py  test_async.py  test_filtering_helpers.py  test_finalizers.py  test_it.py  test_lastseen.py  test_liveness.py  test_progress.py  test_sleeping.py  test_thirdparty.py  test_versions.py
tests/admission/: conftest.py  test_admission_manager.py  test_admission_server.py  test_certificates.py  test_jsonpatch.py  test_managed_webhooks.py  test_serving_ephemeral_memos.py  test_serving_handler_selection.py  test_serving_kwargs_passthrough.py  test_serving_responses.py  test_webhook_detection.py  test_webhook_ngrok.py  test_webhook_server.py
tests/apis/: test_api_requests.py  test_default_namespace.py  test_error_retries.py  test_iterjsonlines.py
tests/authentication/: _proxy_server.py  test_authentication.py  test_connectioninfo.py  test_credentials.py  test_login.py  test_login_kubeconfig.py  test_login_serviceaccount.py  test_login_via_client_async.py  test_login_via_client_sync.py  test_login_via_pykube.py  test_reauthentication.py  test_tempfiles.py  test_vault.py
tests/basic-structs/: test_body.py  test_cause.py  test_causes.py  test_containers.py  test_handler.py  test_handlers.py  test_handlers_deprecated_cooldown.py  test_memories.py  test_memos.py  test_patch.py  test_patch_fields.py  test_patch_fns.py  test_patch_json.py  test_resource.py
tests/causation/: test_detection.py  test_kwargs.py
tools/: install-clients.sh  install-k3d-k3s.sh  install-kind.sh  install-kubectl.sh  install-minikube.sh  kubernetes-client.sh  minikube-for-travis.sh
website/: index.html
(+306 files in other folders)
